--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "grunt-contrib-imagemin": "~0.1.4",
         "grunt-webfont": "~0.3.2",
 		"assemble": "~0.4.37",
-		"grunt-contrib-copy": "~0.5.0"
+		"grunt-contrib-copy": "~0.5.0",
+		"grunt-rsync": "~0.6.2"
     }
 }
